--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 
     <figure id="game-screen"></figure>
 
+
+
+    <script src="./js/ring.js"></script>
     <script src="./js/bullets.js"></script>
+    <script src="./js/bigEnemies.js"></script>
     <script src="./js/enemies.js"></script>
+    <script src="./js/stats.js"></script>
     <script src="./js/player.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/game.js"></script>
