started visual style

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./js/bigEnemies.js"></script>
     <script src="./js/enemies.js"></script>
     <script src="./js/stats.js"></script>
+    <script src="./js/lifeBar.js"></script>
     <script src="./js/player.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/game.js"></script>
