--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOTR: Shadows of Moria</title>
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    
+    
+    <figure id="game-intro"></figure>
     <figure id="game-screen"></figure>
-
-
+    <figure id="game-end"></figure>
 
     <script src="./js/ring.js"></script>
     <script src="./js/bullets.js"></script>
@@ -23,6 +28,8 @@
     <script src="./js/player.js"></script>
     <script src="./js/background.js"></script>
     <script src="./js/game.js"></script>
+    <script src="./js/gameintro.js"></script>
+    <script src="./js/gameOver.js"></script>
     <script src="./js/index.js"></script>
 
 </body>
